--- a/jupyter_notebooks/gradr_logic_algo.ipynb
+++ b/jupyter_notebooks/gradr_logic_algo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -29,10 +29,10 @@
      "output_type": "stream",
      "text": [
       "========================================\n",
-      "Overall Weighted Average: 90.10%\n",
+      "Overall Weighted Average: 87.67%\n",
       "========================================\n",
       "Projects Average: 100.00%\n",
-      "Quiz Average: 78.00%\n",
+      "Quiz Average: 72.61%\n",
       "Class Participation Average: 100.00%\n"
      ]
     }
@@ -46,8 +46,8 @@
     "           CAT2: 0.45,\n",
     "           CAT3: 0.05}\n",
     "\n",
-    "grades = {CAT1: [100, 100],\n",
-    "          CAT2: [94, 75, 65],\n",
+    "grades = {CAT1: [100, 100, 100, 90, 100, 100, 100, 110, 100, 100],\n",
+    "          CAT2: [94, 75, 65, 67.5, 6.75, 70, 130],\n",
     "          CAT3: [100]}\n",
     "\n",
     "averages = [npa(grades[CAT1]), \n",
@@ -66,24 +66,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "========================================\n",
-      "Overall Weighted Average: 93.03%\n",
-      "========================================\n",
-      "Projects Average: 100.00%\n",
-      "Quiz Average: 84.50%\n",
-      "Class Participation Average: 100.00%\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
